static/css/style.css
/* ... */
.alignright img,
.alignleft img,
.aligncenter img,
.alignnone img,
.size-auto img,
.size-full img,
.size-large img,
.size-medium img,
.size-thumbnail img {
  max-width: 100%;
}

.alignleft {
  float: left;
  margin: 0 1.5em 1.5em 0;
}

.alignright {
  float: right;
  margin: 0 0 1.5em 1.5em;
}

.aligncenter {
  text-align: center;
  margin: 1.5em auto;
  display: block;
  max-width: 100%;
}

.alignnone {
  margin: 1.5em;
}

img {
  height: auto;
  line-height: 0;
}

.singular-attachment img {
  max-width: 100%;
}

.wp-caption-text {
  margin: 0;
  color: #8c8c8c;
}

.wp-caption.aligncenter {
  max-width: none;
  margin: 0 auto;
  width: auto !important;
}

/* Form styles */
input[type="text"],
input[type="email"],
input[type="password"],
input[type="number"],
input[type="search"],
input[type="tel"],
input[type="url"],
textarea {
  padding: 0.8em;
  width: 100%;
  max-width: 27.75em;
  min-height: 45px;
  outline: solid 1px #000;
  border: none;
  font-family: "raleway", sans-serif;
  font-size: 0.813em;
  line-height: 1.85;
  border-radius: 0;
  -webkit-appearance: none;
  -webkit-transition: all 0.2s ease;
          transition: all 0.2s ease;
}

textarea {
  max-width: 41.625em;
  overflow: auto;
}

input[type="submit"] {
  background: #222;
  color: white;
  max-width: 22.2em;
  min-width: 11.1em;
  padding: 0.8em;
  min-height: 45px;
  outline: none;
  border: none;
  font-family: "raleway", sans-serif;
  font-size: 0.813em;
  line-height: 1.85;
  border-radius: 0;
  -webkit-appearance: none;
  -webkit-transition: all 0.2s ease;
          transition: all 0.2s ease;
}
input[type="submit"]:hover, input[type="submit"]:active, input[type="submit"]:focus {
  cursor: pointer;
  background: black;
}

input[type="search"] {
  margin-right: 1.5em;
  padding-right: 0.375em;
  /* so safari 'x' doesn't get cut off */
}

/* sticky */
.excerpt.sticky .excerpt-container {
  background: wheat;
}

/* ie image border fix */
a img {
  border: none;
}

.screen-reader-text {
  position: absolute;
  clip: rect(1px 1px 1px 1px);
  /* IE6, IE7 */
  clip: rect(1px, 1px, 1px, 1px);
  overflow: hidden;
  height: 1px;
  width: 1px;
}

.skip-content {
  position: absolute;
  width: 100%;
  background: #111;
  color: #aaaaaa;
  text-align: center;
  padding: 0.375em;
  top: -4.5em;
  z-index: 19;
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 0.08em;
}
.skip-content:active, .skip-content:focus {
  top: 0;
  color: #ffffff;
}

.search .sticky {
  background: white;
}

.blog .main,
.archive .main,
.search .main {
  width: 88.89%;
  max-width: 1280px;
}
.blog #breadcrumbs,
.archive #breadcrumbs,
.search #breadcrumbs {
  width: 100%;
}

.entry {
  max-width: 1280px;
}

.infinite-loader,
#infinite-handle {
  clear: both;
}

#breadcrumbs {
  margin: 1.5em auto;
  width: 88.88%;
  max-width: 1280px;
  color: #aaaaaa;
}
#breadcrumbs a {
  color: #fff;
}

@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (orientation: landscape) {
  html {
    -webkit-text-size-adjust: none;
    /* none for no scaling */
  }
}
@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: landscape) {
  html {
    -webkit-text-size-adjust: none;
    /* none for no scaling */
  }
}
.site-header {
  padding: 0.75em 5.55%;
}
.site-header .container {
  margin: 0 auto;
  max-width: 1280px;
}
.site-header:after {
  content: ".";
  display: block;
  clear: both;
  visibility: hidden;
  line-height: 0;
  height: 0;
}

.title-info {
  float: left;
  position: relative;
  z-index: 29;
}

.site-title {
  letter-spacing: 0.06em;
  opacity: 0.6;
  -webkit-transition: opacity 0.2s ease;
          transition: opacity 0.2s ease;
}
.site-title span {
  opacity: 0;
  position: absolute;
  top: -99em;
}
.site-title a {
  color: white;
}
.site-title a:link, .site-title a:visited, .site-title a:hover, .site-title a:active, .site-title a:focus {
  color: white;
}
.site-title img {
  max-width: 5em;
  max-height: 1.5em;
}
.site-title:hover, .site-title:active, .site-title:focus {
  opacity: 1;
}

.toggle-navigation {
  position: relative;
  float: right;
  z-index: 29;
  border: none;
  background: none;
  font-size: 1em;
  margin: 0;
  padding: 0 0 0 1.5em;
  color: white;
  opacity: 0.6;
  -webkit-transition: opacity 0.2s ease;
          transition: opacity 0.2s ease;
}
.toggle-navigation:hover, .toggle-navigation:active, .toggle-navigation:focus {
  opacity: 1;
  cursor: pointer;
  outline: none;
}

.menu-primary, .menu-primary-tracks {
  -webkit-transform: translateZ(0);
          transform: translateZ(0);
  -webkit-backface-visibility: hidden;
          backface-visibility: hidden;
  position: absolute;
  top: 0;
  padding-top: 6em;
  left: 100%;
  height: 100%;
  width: 100%;
  z-index: 19;
  background-image: -webkit-linear-gradient(#222 26px, transparent 24px, transparent 24px);
  background-image: linear-gradient(#222 26px, transparent 24px, transparent 24px);
  background-size: 1px 48px;
  /* this is a 24px baseline grid */
  text-align: center;
  -webkit-transition: all 0.3s ease-in-out;
          transition: all 0.3s ease-in-out;
}

.menu-primary-tracks {
  top: 1.5em;
  left: -100%;
  z-index: 19;
}

.site-header .site-description {
  opacity: 0;
  color: white;
}

.menu-unset > ul,
.menu-primary-items {
  list-style: none;
  opacity: 0;
}
.menu-unset > ul a,
.menu-primary-items a {
  display: block;
  color: white;
  opacity: 0.6;
  margin: 1.5em 0 0.75em 0;
  -webkit-backface-visibility: hidden;
          backface-visibility: hidden;
}
.menu-unset > ul a:only-child,
.menu-primary-items a:only-child {
  margin: 1.5em 0;
}
.menu-unset > ul a:link, .menu-unset > ul a:visited,
.menu-primary-items a:link,
.menu-primary-items a:visited {
  color: white;
}
.menu-unset > ul a:hover, .menu-unset > ul a:active, .menu-unset > ul a:focus,
.menu-primary-items a:hover,
.menu-primary-items a:active,
.menu-primary-items a:focus {
  opacity: 1;
}
/* ... */

